# Presi3D.exe

./: .gitignore  ANIMATION_PLAN.md  CMakeLists.txt  FEATURES_TODO.md  README.md  WELTOBJEKTE_PLAN.md  refactor.md  update.md
installer/: Presi3D.iss
projeckte/ExampleProjeckt/: index.html  styles.css
projeckte/ExampleProjeckt/assets/models/64789e38-432f-40e0-9e54-ba8692e4e748/: simple_cube.glb
projeckte/Projeckt1/: index.html
resources/: icons.qrc
scripts/: make_icon.ps1
src/: EditorArea.cpp  EditorArea.h  FormatBar.cpp  FormatBar.h  IconPackManager.cpp  IconPackManager.h  IconUtils.cpp  IconUtils.h  ImageFillRenderer.cpp  ImageFillRenderer.h  LocalHttpServer.cpp  LocalHttpServer.h  MainWindow.cpp  MainWindow.h  MeshGradientRenderer.cpp  MeshGradientRenderer.h  PropertiesPanel.cpp  PropertiesPanel.h  ShapeBoolean.cpp  ShapeBoolean.h  ShapeUtils.h  SlideEditor2D.cpp  SlideEditor2D.h  SlideEditor3D.cpp  SlideEditor3D.h  SlideListPanel.cpp  SlideListPanel.h  TimelinePanel.cpp  TimelinePanel.h  UpdateChecker.cpp  UpdateChecker.h  main.cpp
src/dialogs/: BooleanCutDialog.cpp  BooleanCutDialog.h  ChartEditorDialog.cpp  ChartEditorDialog.h  ExportDialog.cpp  ExportDialog.h  IconPickerDialog.cpp  IconPickerDialog.h  ImageFillDialog.cpp  ImageFillDialog.h  InsertButtonDialog.cpp  InsertButtonDialog.h  InsertChartDialog.cpp  InsertChartDialog.h  InsertCheckboxDialog.cpp  InsertCheckboxDialog.h  InsertFormulaDialog.cpp  InsertFormulaDialog.h  InsertIFrameDialog.cpp  InsertIFrameDialog.h  InsertSliderDialog.cpp  InsertSliderDialog.h  InsertTableDialog.cpp  InsertTableDialog.h  InsertWorldObjectDialog.cpp  InsertWorldObjectDialog.h  MeshGradientDialog.cpp  MeshGradientDialog.h  ShapePickerDialog.cpp  ShapePickerDialog.h  StartDialog.cpp  StartDialog.h  VariableManagerDialog.cpp  VariableManagerDialog.h
src/export/: HtmlExporter.cpp  HtmlExporter.h  ImageExporter.cpp  ImageExporter.h  PdfExporter.cpp  PdfExporter.h  SlideRenderer.cpp  SlideRenderer.h
src/import/: HtmlImporter.cpp  HtmlImporter.cpp.backup  HtmlImporter.h
src/models/: ChartData.cpp  ChartData.h  DataModel.h  MeshGradientData.cpp  MeshGradientData.h  Presentation.cpp  TimelineEngine.cpp  TimelineEngine.h  TimelineTrack.cpp  TimelineTrack.h  VariableEngine.cpp  VariableEngine.h  VariableModel.cpp  VariableModel.h  WorldObjectMesh.cpp  WorldObjectMesh.h
src/rendering/: ChartRenderer.cpp  ChartRenderer.h  CodeHighlighter.cpp  CodeHighlighter.h  LatexRenderer.cpp  LatexRenderer.h
